...
                                                    <action selector="refreshButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1Lj-Nw-TKJ"/>
                                                </connections>
                                            </button>
                                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6zg-eQ-OOg">
                                                <rect key="frame" x="0.0" y="0.0" width="390" height="44"/>
                                                <subviews>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Keyword" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xkE-HT-Ayb">
                                                        <rect key="frame" x="0.0" y="0.0" width="390" height="44"/>
                                                        <color key="tintColor" systemColor="systemOrangeColor"/>
                                                        <color key="textColor" systemColor="systemOrangeColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                        <userDefinedRuntimeAttributes>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hQZ-Vq-sjy" secondAttribute="trailing" id="m8O-qE-n4i"/>
                            <constraint firstItem="IUe-0i-m4u" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="vz2-Gg-oyf"/>
                            <constraint firstItem="BEo-MT-Cqb" firstAttribute="top" secondItem="IUe-0i-m4u" secondAttribute="top" id="zRJ-tp-jYr"/>
                            <constraint firstItem="hQZ-Vq-sjy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zgh-QA-6yQ"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Reddit Photo Search" id="0bm-EV-ztE"/>
                    <connections>
                        <outlet property="errorView" destination="0d9-ak-tXG" id="h9l-UJ-ba8"/>
                        <outlet property="favoritesButton" destination="saR-rX-z8h" id="VG7-wa-ALs"/>
                        <outlet property="imageCollectionView" destination="Qvj-AB-exS" id="OMY-2f-xeM"/>
                        <outlet property="noDataFoundView" destination="g1O-T3-i9L" id="tr1-u0-726"/>
                        <outlet property="noTextSearchView" destination="ehj-gn-Fwz" id="bhP-ub-BLS"/>
...
                            <constraint firstItem="pF1-o9-3ST" firstAttribute="leading" secondItem="h2W-GK-ZkA" secondAttribute="leading" id="adq-Z3-wT2"/>
                            <constraint firstItem="HJc-12-8cu" firstAttribute="top" secondItem="h2W-GK-ZkA" secondAttribute="top" id="eOX-Cu-hqO"/>
                            <constraint firstItem="pF1-o9-3ST" firstAttribute="bottom" secondItem="h2W-GK-ZkA" secondAttribute="bottom" id="kts-w4-7f9"/>
                            <constraint firstItem="h2W-GK-ZkA" firstAttribute="trailing" secondItem="HJc-12-8cu" secondAttribute="trailing" id="q98-qq-dX0"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Detail" id="v5q-mH-u5m"/>
                    <connections>
                        <outlet property="addFavoriteButton" destination="HHQ-5p-BNS" id="ewa-YC-1bU"/>
                        <outlet property="authorLabel" destination="mjq-Qi-PaO" id="Wsi-JJ-eUR"/>
                        <outlet property="detailView" destination="gnl-S0-ikP" id="k9j-wv-Lbq"/>
                        <outlet property="nextButton" destination="qPO-Q1-f1d" id="3ig-1U-bnB"/>
                        <outlet property="priorButton" destination="bGv-ID-LSq" id="Zv4-o0-wgh"/>
...
